--- a/css/main.css
+++ b/css/main.css
@@ -17,35 +17,40 @@ body {
 .fa {
   padding: 25px;
   font-size: 40px;
-  width: 15%;
+  width: 120px;
   text-align: center;
   text-decoration: none;
   margin: 25px 50px;
   border-radius: 50%;
   -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   -webkit-filter: brightness(100%);
+  filter: brightness(100%);
 }
 
 .fa:hover {
-  color: white;
+  color: var(--bg);
   text-decoration: none;
   -webkit-filter: brightness(75%);
-  -webkit-transform: scale(1.2);
+  filter: brightness(75%);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  box-shadow: 0 0 30px var(--bg);
 }
 
 .fa-linkedin {
   background: var(--linkedin);
-  color: white;
+  color: var(--bg);
 }
 
 .fa-github {
   background: var(--github);
-  color: white;
+  color: var(--bg);
 }
 
 .fa-google {
   background: var(--google);
-  color: white;
+  color: var(--bg);
 }
 
 /* AVATAR */
@@ -75,7 +80,7 @@ div.container > div {
   padding-top: 1rem;
   padding-bottom: 2rem;
   min-width: 100%;
-  min-height: 50vh;
+  min-height: 25vh;
 }
 
 #contact-section {
@@ -89,6 +94,20 @@ div.container > div {
   background-color: darkgrey;
 }
 
-p {
+
+.skills-block {
+  display: inline-block;
+  padding-left: .5rem;
+  padding-right: .5rem;
+  margin-bottom: 3px;
+  font-weight: 400;
+  font-size: .9rem;
+  color:#ffffff;
+  background-color:var(--bg2);
+  border-radius:5px;
+  border:1px solid transparent
+}
+
+.indent {
   text-indent: 30px;
 }
