--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 
 html[data-theme="light"] {
   --icon: black;
-  --icon-highlight: rgb(95, 158, 160);
+  --icon-highlight: rgb(95, 158, 160); /* cadet blue */
   --bg: #fffffa;
   --bg2: #3f6a79;
   --text: #333;
@@ -19,7 +19,7 @@ html[data-theme="light"] {
 
 html[data-theme="dark"] {
   --icon: white;
-  --icon-highlight: CadetBlue;
+  --icon-highlight: rgb(95, 158, 160); /* cadet blue */
   --bg: #212121;
   --bg2: #3f6a79;
   --text: #fffffa;
