--- a/css/main.css
+++ b/css/main.css
@@ -30,61 +30,46 @@ html[data-theme="dark"] {
 body {
   background-color: var(--bg);
   color: var(--text);
+  min-height: 100%;
 }
 
-#about-section,
-#now-section,
-#education-section,
-#projects-section,
-#skills-section {
+#about-section, #now-section, #education-section, 
+#projects-section, #skills-section {
   background-color: var(--bg-off);
   padding: 0 3em;
 }
 
+@keyframes highlightIn {
+  0% { box-shadow: 0px 0px 5px 5px var(--bg-off); }
+  100% { box-shadow: 0px 0px 5px 5px var(--icon-highlight); }
+}
+
+@keyframes highlightOut {
+  0% { box-shadow: 0px 0px 5px 5px var(--icon-highlight); }
+  100% { box-shadow: 0px 0px 5px 5px var(--bg-off); }
+}
+
 .page {
   margin-bottom: 3em;
-  box-shadow: 5px 5px 12px 1px var(--icon);
+  box-shadow: 0px 0px 5px 5px var(--bg-off);
+  animation: highlightOut .5s linear 0s normal;
+}
+
+.page:hover, .page:focus-visible {
+  box-shadow: 0px 0px 5px 5px var(--icon-highlight);
+  animation: highlightIn .5s linear 0s normal;
 }
 
 /* FA BUTTONS */
-#contact-section {
-  background-color: var(--white);
-}
-
-#contact-section h4 {
-  color: var(--bg);
-}
-
-#contact-section .fa {
-  padding: 25px;
-  font-size: 2em;
-  width: 3em;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-  margin: 15px 30px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.25s ease-in-out;
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%);
-}
-
-#contact-section .fa:hover {
-  color: var(--white);
-  text-decoration: none;
-  -webkit-filter: brightness(75%);
-  filter: brightness(75%);
-  box-shadow: 0 0 15px var(--white);
-}
-
-#social-medias {
-  margin-bottom: 5px;
+.social-medias a:hover {
+  color: var(--icon-highlight)!important;
 }
 
 .fa-linkedin, .fa-github-alt, .fa-envelope {
   padding: .2em;
   color: var(--icon);
 }
+
 
 .fa.fa-angle-down {
   color: var(--icon);
@@ -95,6 +80,9 @@ body {
   color: var(--icon);
   transform: none;
   font-size: 1.5em;
+}
+.fa.fa-angle-up:hover, .fa.fa-angle-down:hover {
+  color: var(--icon-highlight);
 }
 
 /* AVATAR */
@@ -114,35 +102,11 @@ body {
   padding: 5%;
 }
 
-.header1 {
-  width: 100%;
-  margin: 0 auto;
-  padding: 10px;  
-  position: relative;
-}
-
-.info1 {
-  box-sizing: border-box;
-  padding: 0 50px;
-  width: 80%;
-  position: absolute;
-  right: 0;
-  vertical-align: top;
-  top: 60%;
-  transform: translateY(-50%);
-}
 
 h2.header {
   font-family: 'Gentium Basic', serif;
   font-size: 2em;
   font-weight: bold;
-}
-
-#contact-section {
-  color: var(--bg);
-  background-color: var(--bg2);
-  padding: 1rem;
-  min-height: 25vh;
 }
 
 .skills-block {
@@ -175,7 +139,6 @@ h2.header {
 }
 
 h4 {
-  /* text-shadow: var(--bg2) 0px 0px 2px; */
   padding-bottom: 10px;
 }
 
@@ -214,7 +177,23 @@ div#projects-section div.project {
   font-size: .7em;
 }
 
-.fa:hover {
-  color: var(--icon-highlight);
+
+/* SCROLL BAR */
+
+::-webkit-scrollbar {
+  width: 1em;
 }
 
+::-webkit-scrollbar-track {
+  background: var(--bg);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--bg-off);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--icon-highlight);
+}
