fixed timeline, updated highlight

--- a/css/main.css
+++ b/css/main.css
@@ -98,13 +98,24 @@ nav {
   margin-bottom: 3em;
   padding-top: 3em;
   box-shadow: 0px 0px 5px 5px var(--bg-off);
+}
+
+.page-highlight-off {
+  box-shadow: 0px 0px 5px 5px var(--bg-off);
   animation: highlightOut .5s linear 0s normal;
 }
 
-.page:hover, .page:focus-visible {
-  box-shadow: 0px 0px 5px 5px var(--icon-highlight);
+.page-highlight-on {
+  box-shadow: 0px 0px 5px 5px var(--icon-highlight)!important;
   animation: highlightIn .5s linear 0s normal;
 }
+
+/* 
+.page:hover {
+  box-shadow: 0px 0px 5px 5px var(--icon-highlight);
+  animation: highlightIn .5s linear 0s normal;
+} 
+*/
 
 /* FA BUTTONS */
 .social-medias a:hover {
@@ -274,10 +285,6 @@ ul.preview-section-list {
   border-left-width: 1px;
 }
 
-.preview-section-square {
-  width: 20px;
-  height: 20px;
-}
 
 .preview-section-info.active {
   pointer-events: none;
@@ -287,21 +294,50 @@ ul.preview-section-list {
   display: block;
   background-color: var(--icon-highlight);
   position: absolute;
-  top: 8px;
-  left: 0px;
+  top: 0px;
+  left: -7px;
   width: 7px;
   height: 7px;
   content: "";
+}
+
+@keyframes growBtn {
+  0% {
+    width: 7px;
+  }
+  100% {
+    width: 30px;
+  }
+}
+
+@keyframes shrinkBtn {
+  0% {
+    width: 30px;
+  }
+  100% {
+    width: 7px;
+  }
+}
+
+.preview-section-btn.inactive .preview-section-square:before {
+  animation: shrinkBtn .5s;
+  width: 7px;
 }
 
 .preview-section-btn.active .preview-section-square:before {
   color: var(--icon-highlight);
   background-color: var(--icon-highlight);
   opacity: 1;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 7px;
   top: 0;
-  left: 0;
+  left: -7px;
+
+  /* @keyframes 
+    duration | easing-function | delay | iteration-count 
+  | direction | fill-mode | play-state | name 
+  */
+  animation: growBtn .5s;
 }
 
 .preview-section-info {
